kubernetes/clusters/home/infrastructure/networking/traefik/dashboard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Traefik
    gethomepage.dev/group: Platform
    gethomepage.dev/icon: traefik.png
    gethomepage.dev/href: https://traefik.syslabs.dev
    gethomepage.dev/siteMonitor: https://traefik.syslabs.dev
    gethomepage.dev/statusStyle: "dot"
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`traefik.syslabs.dev`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-auth
      services:
        - name: api@internal
          kind: TraefikService
  tls: {}
